--- a/app/views/reflected/_belongsedit.html.erb
+++ b/app/views/reflected/_belongsedit.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div id="hq_<%= owner.class.name.underscore %>_editor" class="editor">
         
-        <div id="hq_procs" class="content">
+        <div id="has_manys" class="content">
             <%= belongs_to_select(f,owner) %>
         </div>
     </div>
