--- a/app/views/reflected/_belongsshow.html.erb
+++ b/app/views/reflected/_belongsshow.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div id="content_<%= owner.id %>" class="editor">
         
-        <div id="hq_procs" class="content">
+        <div id="belongs_to" class="content">
             
 			<%= @object.send(owner.name.to_s.underscore).name %>
         </div>
