--- a/app/views/reflected/_new.html.erb
+++ b/app/views/reflected/_new.html.erb
@@ -7,7 +7,7 @@
         <%= @object.screen_name %>
         
     </div>
-    <div id="hq_proc_name" class="editor">
+    <div id="new_name" class="editor">
         <%= f.text_field :name %>
     </div>
 </div>
