--- a/app/views/hq_tasks/line/_hq_proc.html.erb
+++ b/app/views/hq_tasks/line/_hq_proc.html.erb
@@ -1,11 +1,10 @@
-<div class="hq_proc">
-    <% new_or_existing = hq_proc.new_record? ? 'new' : 'existing' %>
-    <% prefix = "hq_task[#{new_or_existing}_hq_proc_attributes][#{hq_proc.id}]" %>
-    <% fields_for prefix, hq_proc do |hq_proc_form| -%>
-    <p>
-        Process: <%= hq_proc_form.text_field :name %>
-       
-        <span class="remove"><%= link_to_function "remove", "$(this).up('.hq_proc').remove()" %></span>
-    </p>
-    <% end -%>
-</div>
+<% new_or_existing = hq_proc.new_record? ? 'new' : 'existing' %>
+<% prefix = "hq_task[#{new_or_existing}_hq_proc_attributes][#{hq_proc.id}]" %>
+<% fields_for prefix, hq_proc do |hq_proc_form| -%>
+<li class="hq_proc" id="hq_procs_<%= hq_proc.id %>">
+    Process: <%= hq_proc_form.text_field :name %>
+	<% if params[:action] == 'edit' %>
+    <span class="remove"><%= link_to_function "remove", "$(this).up('.hq_proc').remove()" %></span>
+	<% end -%>
+</li>
+<% end -%>
