--- a/app/views/reflected/_hasedit.html.erb
+++ b/app/views/reflected/_hasedit.html.erb
@@ -9,7 +9,7 @@
             <%= add_has_many_link(owns) %>
         </div>
         <div id="<%= owns.name.to_s %>_list" class="editorlist content">
-        <% @item.send(owns.name).each do |x| -%>
+        <% @object.send(owns.name).each do |x| -%>
         <% prefix = "#{owns.name.to_s.singularize}[existing_#{x.class.name.underscore}_attributes][#{x.id}]" %>
         <% fields_for prefix, x do |x_fields| %>
         <% keys = x.attributes.keys.reject {|y|  y.match('id$').nil? == false or y.match('_type').nil? == false or y.match('_at').nil? == false} -%>
