--- a/app/views/hq_procs/line/_hq_rsrc.html.erb
+++ b/app/views/hq_procs/line/_hq_rsrc.html.erb
@@ -1,6 +1,6 @@
 <div class="hq_rsrc">
     
-        Resource: <%= hq_proc_hq_rsrc_select(HqRsrc.all, hq_rsrc.id) %>
+        Resource: <%= hq_proc_hq_rsrc_select(HqRsrc.by_name, hq_rsrc.id) %>
         <% if params[:action] == 'edit' -%>
         <span class="remove"><%= link_to_function "remove", "$(this).up('.hq_rsrc').remove()" %></span>
 		<% end -%>
