--- a/app/views/reflected/_poly_has_many_line.html.erb
+++ b/app/views/reflected/_poly_has_many_line.html.erb
@@ -1,6 +1,6 @@
 <div class="line">
     <% new_or_existing = x.new_record? ? 'new' : 'existing' %>
-    <% prefix = "#{@item.class.name.to_s.underscore}[#{new_or_existing}_#{x.class.name.underscore}_attributes][#{x.id}]" %>
+    <% prefix = "#{@object.class.name.to_s.underscore}[#{new_or_existing}_#{x.class.name.underscore}_attributes][#{x.id}]" %>
 
 	<% keys = x.attributes.keys.reject {|y|  y.match('id$').nil? == false or y.match('_type').nil? == false or y.match('_at').nil? == false} -%>
     <% keys.each do |key| -%>
