--- a/app/views/reflected/_polyshow.html.erb
+++ b/app/views/reflected/_polyshow.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="editor">
         <div id="<%= polyowns.name.to_s %>_list" class="editorlist content">
-        <% @item.send(polyowns.name).each do |x| -%>
+        <% @object.send(polyowns.name).each do |x| -%>
        
  
         <% keys = x.attributes.keys.reject {|y|  y.match('id$').nil? == false or y.match('_type').nil? == false or y.match('_at').nil? == false} -%>
