--- a/app/views/reflected/_record_line.html.erb
+++ b/app/views/reflected/_record_line.html.erb
@@ -1,9 +1,9 @@
 <div class="line">
 <% new_or_existing = @object.new_record? ? 'new' : 'existing' %>
-<% prefix = "#{@item.class.name.to_s.underscore}" %>
+<% prefix = "#{@object.class.name.to_s.underscore}" %>
 <% keys = @object.attributes.keys.reject {|y|  y.match('id$').nil? == false or y == 'position' or y.match('_type').nil? == false or y.match('_at').nil? == false} -%>
 <% keys.each do |key| -%>
-<%= label_tag prefix+"[#{key}]", key %>: <%= text_field_tag prefix+"[#{key}]",  @object.send(key) %>
+<%= label_tag prefix+"[#{key}]", key %>: <%= text_field_tag prefix+"[#{key}]",  @object.send(key), :size => 45 %><br />
 <% end -%>
 
 </div>
