--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
         <%= javascript_include_tag :defaults %>
         <%= stylesheet_link_tag 'master' %>
+		<%= stylesheet_link_tag 'bulletproof' %>
         <title><%= @title %></title>
     </head>
     <body>
