--- a/app/views/hq_systems/edit/_tasks.html.erb
+++ b/app/views/hq_systems/edit/_tasks.html.erb
@@ -9,6 +9,7 @@
                     Tasks
                 </th>
                 <th>
+                    Description
                 </th>
                 <th>
                     Tools
@@ -16,10 +17,10 @@
             </tr>
         </thead>
         <tbody class="scrollContent">
-            <% tasks.each do |task| -%>
+            <% @tasks.each do |task| -%>
             <tr class="<%= cycle('normalRow','alternateRow') %>">
                 <td width="20">
-                    <%= check_box_tag 'selected' %>
+                    <%= check_box_tag 'hq_task_ids[]', task.id %>
                 </td>
                 <td>
                     <%= task.name %>
@@ -33,3 +34,4 @@
         </tbody>
     </table>
 </div>
+<%= submit_to_remote 'procs_by_tasks', 'Filter', :url => { :action => 'procs_by_tasks' } %>
