--- a/public/stylesheets/bulletproof.css
+++ b/public/stylesheets/bulletproof.css
@@ -1,6 +1,6 @@
 div.tableContainer {
     clear: both;
-    max-height: 379px;
+    max-height: 249px;
     overflow: auto;
     width: 838px;
     margin-top: 1px;
@@ -8,7 +8,9 @@ div.tableContainer {
     border-left: solid 1px #A49078;
     border-right: solid 1px #A49078;
     border-bottom: solid 1px #A49078;
-    min-height: 148px;
+    /*
+min-height: 148px;
+*/
 }
 
 /* Reset overflow value to hidden for all non-IE browsers. */
@@ -79,8 +81,10 @@ html > body tbody.scrollContent {
     overflow-x: hidden;
 	overflow-y: auto;
     width: 100%;
-    max-height: 339px;
-    min-height: 108px;
+    max-height: 209px;
+    /*
+min-height: 108px;
+*/
 }
 
 /* make TD elements pretty. Provide alternating classes for striping the table */
